@@ -1257,7 +1257,7 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       internal.debugClearFailAt();
       db._drop(cn);
     },
-    
+
     test_cursor_non_stream_request_retriable_multiple_refetches: function () {
       let cmd = api;
       let body = {"query": `FOR u IN ${cn} RETURN u`, "options": {"stream": false, "allowRetry": true}};
@@ -1289,7 +1289,7 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertEqual(doc.parsedBody['id'], cursorId);
       nextBatchId = doc.parsedBody['nextBatchId'];
       assertEqual(nextBatchId, "2");
-      
+
       cmd = api + `/${cursorId}/${parseInt(nextBatchId) - 1}`;
       doc = arango.POST_RAW(cmd, "");
 
@@ -1303,10 +1303,10 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertEqual(doc.parsedBody['id'], cursorId);
       nextBatchId = doc.parsedBody['nextBatchId'];
       assertEqual(nextBatchId, "2");
-      
+
       cmd = api + `/${cursorId}/${nextBatchId}`;
       doc = arango.POST_RAW(cmd, "");
-      
+
       assertEqual(doc.code, 200);
       assertEqual(doc.headers['content-type'], contentType);
       assertFalse(doc.parsedBody['error']);
@@ -1317,7 +1317,7 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertEqual(doc.parsedBody['id'], cursorId);
       nextBatchId = doc.parsedBody['nextBatchId'];
       assertEqual(nextBatchId, "3");
-      
+
       cmd = api + `/${cursorId}/${parseInt(nextBatchId) - 1}`;
       doc = arango.POST_RAW(cmd, "");
 
@@ -1331,10 +1331,10 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertEqual(doc.parsedBody['id'], cursorId);
       nextBatchId = doc.parsedBody['nextBatchId'];
       assertEqual(nextBatchId, "3");
-      
+
       cmd = api + `/${cursorId}/${parseInt(nextBatchId)}`;
       doc = arango.POST_RAW(cmd, "");
-      
+
       assertEqual(doc.code, 200);
       assertEqual(doc.headers['content-type'], contentType);
       assertFalse(doc.parsedBody['error']);
@@ -1344,10 +1344,10 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertFalse(doc.parsedBody['cached']);
       assertUndefined(doc.parsedBody['id'], cursorId);
       assertUndefined(doc.parsedBody['nextBatchId']);
-      
+
       cmd = api + `/${cursorId}/${parseInt(nextBatchId)}`;
       doc = arango.POST_RAW(cmd, "");
-      
+
       assertEqual(doc.code, 200);
       assertEqual(doc.headers['content-type'], contentType);
       assertFalse(doc.parsedBody['error']);
@@ -1357,10 +1357,10 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertFalse(doc.parsedBody['cached']);
       assertUndefined(doc.parsedBody['id'], cursorId);
       assertUndefined(doc.parsedBody['nextBatchId']);
-      
+
       cmd = api + `/${cursorId}/${parseInt(parseInt(nextBatchId) + 1)}`;
       doc = arango.POST_RAW(cmd, "");
-      
+
       assertEqual(doc.code, 404);
       assertEqual(doc.headers['content-type'], contentType);
       assertTrue(doc.parsedBody.error);
@@ -1414,7 +1414,7 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
 
       cmd = api + `/${cursorId}/${nextBatchId}`;
       doc = arango.POST_RAW(cmd, "");
-      
+
       assertEqual(doc.code, 200);
       assertEqual(doc.headers['content-type'], contentType);
       assertFalse(doc.parsedBody['error']);
@@ -1424,10 +1424,10 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertFalse(doc.parsedBody['cached']);
       assertUndefined(doc.parsedBody['id'], cursorId);
       assertUndefined(doc.parsedBody['nextBatchId']);
-      
+
       cmd = api + `/${cursorId}/${nextBatchId}`;
       doc = arango.POST_RAW(cmd, "");
-      
+
       assertEqual(doc.code, 200);
       assertEqual(doc.headers['content-type'], contentType);
       assertFalse(doc.parsedBody['error']);
@@ -1437,7 +1437,7 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertFalse(doc.parsedBody['cached']);
       assertUndefined(doc.parsedBody['id'], cursorId);
       assertUndefined(doc.parsedBody['nextBatchId']);
-      
+
       cmd = api + `/${cursorId}/${parseInt(nextBatchId) + 1}`;
       doc = arango.POST_RAW(cmd, "");
 
@@ -1475,10 +1475,110 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertUndefined(doc.parsedBody['nextBatchId']);
 
       // must kill the cursor explicitly, so we don't need to wait for the
-      // cursor's full TTL 
+      // cursor's full TTL
       arango.DELETE_RAW(api + `/${cursorId}`, "");
     },
-    
+
+    test_cursor_non_stream_request_non_retriable_next_batch: function () {
+      let cmd = api;
+      let body = {"query": `FOR u IN ${cn} RETURN u`, "options": {"stream": false, "allowRetry": false}};
+      let doc = arango.POST_RAW(cmd, body);
+
+      assertEqual(doc.code, 201);
+      assertEqual(doc.headers['content-type'], contentType);
+      assertFalse(doc.parsedBody['error']);
+      assertEqual(doc.parsedBody['code'], 201);
+      assertEqual(typeof doc.parsedBody['id'], "string");
+      assertMatch(reId, doc.parsedBody['id']);
+      assertTrue(doc.parsedBody['hasMore']);
+      assertEqual(doc.parsedBody['result'].length, 1000);
+      assertFalse(doc.parsedBody['cached']);
+      let cursorId = doc.parsedBody['id'];
+      let nextBatchId = doc.parsedBody['nextBatchId'];
+      assertEqual(nextBatchId, "2");
+
+      cmd = api + `/${cursorId}/${nextBatchId}`;
+      doc = arango.POST_RAW(cmd, "");
+
+      assertEqual(doc.code, 200);
+      assertEqual(doc.headers['content-type'], contentType);
+      assertFalse(doc.parsedBody['error']);
+      assertEqual(doc.parsedBody['code'], 200);
+      assertTrue(doc.parsedBody['hasMore']);
+      assertEqual(doc.parsedBody['result'].length, 1000);
+      assertFalse(doc.parsedBody['cached']);
+      assertEqual(doc.parsedBody['id'], cursorId);
+      nextBatchId = doc.parsedBody['nextBatchId'];
+      assertEqual(nextBatchId, "3");
+
+      cmd = api + `/${cursorId}/${nextBatchId}`;
+      doc = arango.POST_RAW(cmd, "");
+
+      assertEqual(doc.code, 200);
+      assertEqual(doc.headers['content-type'], contentType);
+      assertFalse(doc.parsedBody['error']);
+      assertEqual(doc.parsedBody['code'], 200);
+      assertFalse(doc.parsedBody['hasMore']);
+      assertEqual(doc.parsedBody['result'].length, 1);
+      assertFalse(doc.parsedBody['cached']);
+      assertUndefined(doc.parsedBody['id'], cursorId);
+      assertUndefined(doc.parsedBody['nextBatchId']);
+
+      cmd = api + `/${cursorId}/${nextBatchId}`;
+      doc = arango.POST_RAW(cmd, "");
+
+      assertEqual(doc.code, 200);
+      assertEqual(doc.headers['content-type'], contentType);
+      assertFalse(doc.parsedBody['error']);
+      assertEqual(doc.parsedBody['code'], 200);
+      assertFalse(doc.parsedBody['hasMore']);
+      assertEqual(doc.parsedBody['result'].length, 1);
+      assertFalse(doc.parsedBody['cached']);
+      assertUndefined(doc.parsedBody['id'], cursorId);
+      assertUndefined(doc.parsedBody['nextBatchId']);
+
+      cmd = api + `/${cursorId}/${parseInt(nextBatchId) + 1}`;
+      doc = arango.POST_RAW(cmd, "");
+
+      assertEqual(doc.code, 404);
+      assertEqual(doc.headers['content-type'], contentType);
+      assertTrue(doc.parsedBody.error);
+      assertEqual(doc.parsedBody.errorNum, 1600);
+      assertEqual(doc.parsedBody.errorMessage, "batch id not found");
+      assertEqual(doc.parsedBody['code'], 404);
+      assertUndefined(doc.parsedBody['nextBatchId']);
+
+      cmd = api + `/${cursorId}/0`;
+      doc = arango.POST_RAW(cmd, "");
+
+      assertEqual(doc.code, 404);
+      assertEqual(doc.headers['content-type'], contentType);
+      assertTrue(doc.parsedBody.error);
+      assertEqual(doc.parsedBody.errorNum, 1600);
+      assertEqual(doc.parsedBody.errorMessage, "batch id not found");
+      assertEqual(doc.parsedBody['code'], 404);
+      assertUndefined(doc.parsedBody['nextBatchId']);
+
+      cmd = api + `/${cursorId}`;
+      doc = arango.POST_RAW(cmd, "");
+
+      assertEqual(doc.code, 200);
+      assertEqual(doc.headers['content-type'], contentType);
+      assertFalse(doc.parsedBody['error']);
+      assertEqual(doc.parsedBody['code'], 200);
+      assertFalse(doc.parsedBody['hasMore']);
+      assertUndefined(doc.parsedBody['id']);
+      assertEqual(doc.parsedBody['result'].length, 0);
+      assertFalse(doc.parsedBody['cached']);
+      assertUndefined(doc.parsedBody['id'], cursorId);
+      assertUndefined(doc.parsedBody['nextBatchId']);
+
+      // must kill the cursor explicitly, so we don't need to wait for the
+      // cursor's full TTL
+      arango.DELETE_RAW(api + `/${cursorId}`, "");
+    },
+
+
     test_cursor_stream_request_retriable: function () {
       let cmd = api;
       let body = {"query": `FOR u IN ${cn} RETURN u`, "options": {"stream": true, "allowRetry": true}};
@@ -1522,7 +1622,7 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
 
       cmd = api + `/${cursorId}/${nextBatchId}`;
       doc = arango.POST_RAW(cmd, "");
-      
+
       assertEqual(doc.code, 200);
       assertEqual(doc.headers['content-type'], contentType);
       assertEqual(doc.parsedBody['code'], 200);
@@ -1531,7 +1631,7 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertUndefined(doc.parsedBody['id'], cursorId);
       assertFalse(doc.parsedBody['cached']);
       assertUndefined(doc.parsedBody['nextBatchId']);
-      
+
       cmd = api + `/${cursorId}/${parseInt(nextBatchId) + 1}`;
       doc = arango.POST_RAW(cmd, "");
 
@@ -1565,9 +1665,91 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertUndefined(doc.parsedBody['id']);
       assertFalse(doc.parsedBody['cached']);
       assertUndefined(doc.parsedBody['nextBatchId']);
-      
+
       // must kill the cursor explicitly, so we don't need to wait for the
-      // cursor's full TTL 
+      // cursor's full TTL
+      arango.DELETE_RAW(api + `/${cursorId}`, "");
+    },
+
+    test_cursor_stream_request_non_retriable_next_batch: function () {
+      let cmd = api;
+      let body = {"query": `FOR u IN ${cn} RETURN u`, "options": {"stream": true, "allowRetry": false}};
+      let doc = arango.POST_RAW(cmd, body);
+
+      assertEqual(doc.code, 201);
+      assertEqual(doc.headers['content-type'], contentType);
+      assertFalse(doc.parsedBody['error']);
+      assertEqual(doc.parsedBody['code'], 201);
+      assertEqual(typeof doc.parsedBody['id'], "string");
+      assertMatch(reId, doc.parsedBody['id']);
+      assertTrue(doc.parsedBody['hasMore']);
+      assertEqual(doc.parsedBody['result'].length, 1000);
+      assertFalse(doc.parsedBody['cached']);
+      let cursorId = doc.parsedBody['id'];
+      let nextBatchId = doc.parsedBody['nextBatchId'];
+      assertEqual(nextBatchId, 2);
+
+      cmd = api + `/${cursorId}/${nextBatchId}`;
+      doc = arango.POST_RAW(cmd, "");
+
+      assertEqual(doc.code, 200);
+      assertEqual(doc.headers['content-type'], contentType);
+      assertEqual(doc.parsedBody['code'], 200);
+      assertTrue(doc.parsedBody['hasMore']);
+      assertEqual(doc.parsedBody['result'].length, 1000);
+      assertEqual(doc.parsedBody['id'], cursorId);
+      assertFalse(doc.parsedBody['cached']);
+      nextBatchId = doc.parsedBody['nextBatchId'];
+      assertEqual(nextBatchId, 3);
+
+      cmd = api + `/${cursorId}/${nextBatchId}`;
+      doc = arango.POST_RAW(cmd, "");
+
+      assertEqual(doc.code, 200);
+      assertEqual(doc.headers['content-type'], contentType);
+      assertEqual(doc.parsedBody['code'], 200);
+      assertFalse(doc.parsedBody['hasMore']);
+      assertEqual(doc.parsedBody['result'].length, 1);
+      assertUndefined(doc.parsedBody['id'], cursorId);
+      assertFalse(doc.parsedBody['cached']);
+      assertUndefined(doc.parsedBody['nextBatchId']);
+
+      cmd = api + `/${cursorId}/${parseInt(nextBatchId)}`;
+      doc = arango.POST_RAW(cmd, "");
+
+      assertEqual(doc.code, 404);
+      assertEqual(doc.headers['content-type'], contentType);
+      assertTrue(doc.parsedBody.error);
+      assertEqual(doc.parsedBody.errorNum, 1600);
+      assertEqual(doc.parsedBody.errorMessage, "batch id not found");
+      assertEqual(doc.parsedBody['code'], 404);
+      assertUndefined(doc.parsedBody['nextBatchId']);
+
+      cmd = api + `/${cursorId}/0`;
+      doc = arango.POST_RAW(cmd, "");
+
+      assertEqual(doc.code, 404);
+      assertEqual(doc.headers['content-type'], contentType);
+      assertTrue(doc.parsedBody.error);
+      assertEqual(doc.parsedBody.errorNum, 1600);
+      assertEqual(doc.parsedBody.errorMessage, "batch id not found");
+      assertEqual(doc.parsedBody['code'], 404);
+      assertUndefined(doc.parsedBody['nextBatchId']);
+
+      cmd = api + `/${cursorId}`;
+      doc = arango.POST_RAW(cmd, "");
+
+      assertEqual(doc.code, 200);
+      assertEqual(doc.headers['content-type'], contentType);
+      assertFalse(doc.parsedBody['error']);
+      assertEqual(doc.parsedBody['code'], 200);
+      assertFalse(doc.parsedBody['hasMore']);
+      assertUndefined(doc.parsedBody['id']);
+      assertFalse(doc.parsedBody['cached']);
+      assertUndefined(doc.parsedBody['nextBatchId']);
+
+      // must kill the cursor explicitly, so we don't need to wait for the
+      // cursor's full TTL
       arango.DELETE_RAW(api + `/${cursorId}`, "");
     },
 
@@ -1587,7 +1769,8 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertFalse(doc.parsedBody['cached']);
 
       let cursorId = doc.parsedBody['id'];
-      assertUndefined(doc.parsedBody['nextBatchId']);
+      const nextBatchId = doc.parsedBody['nextBatchId'];
+      assertEqual(nextBatchId, 2);
 
       internal.debugSetFailAt("MakeConnectionErrorForRetry");
 
@@ -1598,9 +1781,8 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertTrue(doc.error);
 
       internal.debugClearFailAt();
-      // as the `batchId` field starts with 1 for the first batch, we assume the next batch id would be 2 for
-      // the failing request to send another request to retrieve its result, knowing it would fail because
-      // the flag `allowRetry`is false
+      // as we can fetch the next batch id and advance the cursor with /<cursorId>/<nextBatchId>, but can't retry the
+      // latest batch, we try to get the former batch again
       cmd = api + `/${cursorId}/2`;
       doc = arango.POST_RAW(cmd, "");
       assertEqual(doc.code, 400);
@@ -1610,12 +1792,12 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertEqual(doc.parsedBody['errorMessage'], 'expecting allowRetry option to be true');
       assertUndefined(doc.parsedBody['id']);
       assertUndefined(doc.parsedBody['nextBatchId']);
-     
+
       // must kill the cursor explicitly, so we don't need to wait for the
-      // cursor's full TTL 
+      // cursor's full TTL
       arango.DELETE_RAW(api + `/${cursorId}`, "");
     },
-    
+
     test_cursor_non_stream_retriable: function () {
       const stmt = db._createStatement({
         query: `FOR u IN ${cn} RETURN u`,
@@ -1640,7 +1822,7 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertFalse(cursor.hasNext());
       cursor.dispose();
     },
-    
+
     test_cursor_stream_retriable: function () {
       const stmt = db._createStatement({
         query: `FOR u IN ${cn} RETURN u`,
@@ -1662,7 +1844,7 @@ function dealing_with_cursorsSuite_retriable_request_last_batch() {
       assertFalse(cursor.hasNext());
       cursor.dispose();
     },
-  
+
   };
 }
 
